# django-period-tracker

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
config/: settings.py  urls.py
cycle/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
cycle/fixtures/: phases.json  symptoms.json
cycle/migrations/: 0001_initial.py
cycle/services/: day.py  phase.py  predict.py  symptom.py  user.py
cycle/templatetags/: cycle_tags.py
templates/: base.html  calendar.html  dashboard.html  day_create.html  day_delete.html  day_detail.html  day_form_base.html  day_update.html  phase_detail.html  phase_list.html  settings_update.html  symptom_detail.html  symptom_list.html
templates/registration/: login.html  signup.html
