[project]
name = "period-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "python-dotenv[cli]>=1.2.2",
    "ruff>=0.15.9",
]

[tool.ruff]
select = ["E", "F", "DJ"]
